--- a/demo-android/src/main/res/values/strings.xml
+++ b/demo-android/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
 
     <string name="discovered"><![CDATA[<b>Discovered:</b> %s]]></string>
     <string name="stored"><![CDATA[<b>Stored:</b> %s]]></string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="bitcoin">Bitcoin</string>
 </resources>
