--- a/demo-android/src/main/res/values/strings.xml
+++ b/demo-android/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="send_bitcoin">Send Bitcoin</string>
     <string name="enter_private_key">Enter private key</string>
     <string name="bitcoin">Bitcoin</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
