--- a/trustchain-trader/src/main/res/values/strings.xml
+++ b/trustchain-trader/src/main/res/values/strings.xml
@@ -21,4 +21,11 @@
     <string name="transferReceiveCancel">Cancel</string>
     <string name="receiverLetSenderConfirm">Let the sender scan this code to confirm the trasfer of funds</string>
     <string name="next">Next</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="amount_currency">$100</string>
+    <string name="Amount_Bandwidth">50pcs</string>
+    <string name="ai_history">AI history</string>
+    <string name="machine_learning_overview">Machine Learning Overview</string>
 </resources>
