--- a/demo-android/src/main/res/values/strings.xml
+++ b/demo-android/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="sending_bitcoins">Wallet Overview</string>
     <string name="send_bitcoin">Send Bitcoin</string>
-    <string name="enter_private_key">Enter private key</string>
+    <string name="enter_private_key">Enter Private Key</string>
     <string name="bitcoin">Bitcoin</string>
 
     <!-- TODO: Remove or change this placeholder text -->
