--- a/currencyii/src/main/res/values/strings.xml
+++ b/currencyii/src/main/res/values/strings.xml
@@ -17,11 +17,11 @@
     <string name="discovered"><![CDATA[<b>Discovered:</b> %s]]></string>
     <string name="stored"><![CDATA[<b>Stored:</b> %s]]></string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="sending_bitcoins">Wallet Overview</string>
     <string name="send_bitcoin">Send Bitcoin</string>
     <string name="enter_private_key">Enter Private Key</string>
     <string name="bitcoin">Bitcoin</string>
+    <string name="dao_overview">DAO Overview</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
