--- a/voting/src/main/res/values/strings.xml
+++ b/voting/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="ongoing_votes">Ongoing Votes</string>
     <string name="initiate_vote">Initiate Vote</string>
+    <string name="new_votes">New Votes</string>
+    <string name="all_votes">All Votes</string>
 
 </resources>
