--- a/voting/src/main/res/values/strings.xml
+++ b/voting/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="create_proposal">Create Proposal</string>
     <string name="new_proposals">New Proposals</string>
     <string name="all_proposals">All Proposals</string>
+    <string name="p_np">P != NP</string>
 
 </resources>
