implemented requested change by Pravesh

--- a/voting/src/main/res/values/strings.xml
+++ b/voting/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="new_proposals">New Proposals</string>
     <string name="all_proposals">All Proposals</string>
     <string name="p_np">e.g. P != NP</string>
-    <string name="yes_no_mode">Yes / No voting</string>
+    <string name="yes_no_mode">Yes / No mode</string>
     <string name="threshold_mode">Threshold mode</string>
 
 </resources>
