--- a/musicdao/src/main/res/values/strings.xml
+++ b/musicdao/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="add_playlist">Add playlist</string>
 
 </resources>
