--- a/musicdao/src/main/res/values/strings.xml
+++ b/musicdao/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="add_playlist">Add playlist</string>
     <string name="app_label">MusicDAO</string>
     <string name="search_hint">Search through music</string>
+    <string name="debug_hint">Show connectivity stats</string>
 
 </resources>
