--- a/ig-ssi/src/main/res/values/strings.xml
+++ b/ig-ssi/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="dialog_fire_missiles">Hello!</string>
     <string name="fire">Fire</string>
     <string name="cancel">Cancel</string>
-    <string name="attribute">Attribute value</string>
+    <string name="attribute_value">Attribute value (e.g. 21)</string>
+    <string name="attribute_name">Attribute name (e.g. age)</string>
     <string name="peer_address">Peer address and port</string>
 </resources>
