--- a/ig-ssi/src/main/res/values/strings.xml
+++ b/ig-ssi/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="requested_value">Request value (e.g. 42)</string>
     <string name="select_image">Select Image</string>
     <string name="id_picture">ID Picture</string>
+    <string name="settings">Settings</string>
+    <string name="rendezvous_token">Rendezvous Token</string>
+    <string name="locating_client">Locating client ...</string>
+    <string name="failed_to_locate_client">Failed to locate client.</string>
 </resources>
