--- a/ig-ssi/src/main/res/values/strings.xml
+++ b/ig-ssi/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="display_first_qr_code">Display first QR code</string>
     <string name="credential_image">Credential image</string>
     <string name="clear_identity">Clear Identity</string>
+    <string name="identity_network">Identity Network</string>
 </resources>
